Fix summary details wrap half-day wording

--- a/assets/scss/overrides/_local.scss
+++ b/assets/scss/overrides/_local.scss
@@ -29,3 +29,7 @@
   align-items: center;
   gap: govuk-spacing(2);
 }
+
+.govuk-summary-list--no-border {
+  width: auto;
+}
